2013-09-24 German Arias <germanandre@gmx.es>

	* PCAppController.m (-applicationDidFinishLaunching: and
	-applicationShouldTerminate:) Code to handle the style
	NSWindows95InterfaceStyle.
	* Headers/ProjectCenter/PCAuxiliaryWindow.h:
	* Framework/PCAuxiliaryWindow.m: Add this class for auxiliary windows.
	This is windows that don't should add the in-window menu.
	* Framework/English.lproj/BuilderPanel.gorm:
	* Modules/Editors/ProjectCenter/PCEditor.m: Use the new class
	PCAuxiliaryWindow.
	* Framework/GNUmakefile: Add new class.

2013-09-22 Riccardo Mottola <rm@gnu.org>

	* Modules/Parsers/ProjectCenter/PCParser.m
	Do not advance start and get startType if we are at the end anyway.

	* Modules/Parsers/ProjectCenter/ObjCClassHandler.h
	* Modules/Parsers/ProjectCenter/ObjCClassHandler.m
	* Modules/Parsers/ProjectCenter/ObjCMethodHandler.h
	* Modules/Parsers/ProjectCenter/ObjCMethodHandler.m
	NSUInteger / NSInteger transitions for count/length variables.

	* Modules/Projects/Application/PCAppProject.m
	* Modules/Projects/Bundle/PCBundleProject.m
	* Modules/Projects/Framework/PCFrameworkProject.m
	* Modules/Projects/Library/PCLibProject.m
	* Modules/Projects/ResourceSet/PCResourceSetProject.m
	* Modules/Projects/Tool/PCToolProject.m
	Transition to NSUInteger.

2013-09-21 Riccardo Mottola <rm@gnu.org>

	* Modules/Parsers/ProjectCenter/PCParser.h
	* Modules/Parsers/ProjectCenter/PCParser.m
	Transition count/length variables to NSUInteger

2013-09-21 Riccardo Mottola <rm@gnu.org>

	* Modules/Parsers/ProjectCenter/PCParser.m
	Fix parser check for temrination, do not look past last char.

	* PCAppController.m
	If filename is not absolute, normalize it (happens when invoking with the filename as argument to the application, e.g. 'ProjectCenter myProject').

2013-09-20 Riccardo Mottola <rm@gnu.org>

	* Framework/PCFileCreator.m
	Do not launch replacing if copying was not successful, avoids hang of app.

2013-09-17 Riccardo Mottola <rm@gnu.org>
